# artemis

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compose.yaml
src/hela3D.Business/: CMakeLists.txt
src/hela3D.Business/include/hela3D.Business/: Person.h  Preprocessor.h
src/hela3D.Business/include/hela3D.Business/Repositories/: IPersonRepository.h
src/hela3D.Business/src/hela3D.Business/: Person.cpp
src/hela3D.Console/: CMakeLists.txt
src/hela3D.Console/src/hela3D.Console/: Program.cpp
src/hela3D.Data/: CMakeLists.txt
src/hela3D.Data/include/hela3D.Data/: Preprocessor.h
src/hela3D.Data/include/hela3D.Data/Repositories/: PersonRepository.h
src/hela3D.Data/src/hela3D.Data/Repositories/: PersonRepository.cpp
